# veille

dev/: Pipfile  simple.py  spark_itw.py
dev/exos/: pandas_exos.py  simple.py
dev/flask/: app.py
dev/general/: lists.py
dev/resources/: departments.csv  quote.txt  salaries.csv
dev/spark/: df.py  spark_itw.py
python/: Pipfile
python/basic/resources/: bad.csv
python/basic/spark/: df.py  rdds.py
python/design_patterns/: pyproject.toml
python/design_patterns/injection/: .env  app.py  config.py  factory.py  injection.py  providers.py
python/design_patterns/tests/injection/: test_injection.py
python/exos/: pandas_exos.py
python/resources/: people.csv
python/utils/: fs.py  spark_utils.py
python_docker/: .gitignore  DockerFile  Dockerfile  main.py
python_docker/python_docker/: main.py
scala/: build.sbt
scala/.bsp/: sbt.json
scala/src/main/scala/genericity/: Genericity.scala
scala/src/main/scala/higher_order/: Higher.scala
scala/src/main/scala/implicits/: Convertion.scala  Emails.scala  Taxes.scala
scala/src/main/scala/monads/: Test.scala
scala/src/main/scala/nomades/: Test.scala
scala/src/main/scala/recursivity/: Solution.scala
scala/src/main/scala/utils/: Display.scala
