[tool.poetry]
name = "pythonproject1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
injector = "*"
pydantic_settings = "*"
pytesseract = "*"
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "*"
python-dotenv = "*"
ruff = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
